#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

DG-2011-03-31-0: Enhancem.:   Added new GE logo to qmon and gui installer.

JG-2011-03-31-1: Enhancem.:   mk_dist shall include the license file.
                 Belongs to:  JG-2011-03-31-1

JG-2011-03-31-0: Enhancem.:   Make sure the LICENSE file is copied by distinst.
                 Issue:       GE-3425
                 Review:      DG

JG-2011-03-30-0: Enhancem.:   Fetch Univa copyright files from uge-extensions.
                 Review:      HP

SH-2011-03-30-2: Bugfix:      qrsh -pty yes converts NL line breaks in CR NL
                              line breaks, corrupting the output on Unix/Linux
                 Belongs to:  HP-2011-03-22-0
                 Issue:       GE-3382
                 Review:      HP

DG-2011-03-30-0: Bugfix:      changed JMX dialog and removed it in default
                              installation
                 Issue:       GE-3422
					  Review:      JG

SH-2011-03-30-1: Bugfix:      shepherd of qsh uses 100% CPU time
                 Issue:       GE-3329
                 Review:      HP

DG-2011-03-29-0: Bugfix:      removed Sun service tags
                 Issue:       GE-3418
                 Review:      JG

EB-2011-03-29-0: Bugfix:      do not allow master switch for batch jobs
                 Issue:       GE-933
                 Review:      TBD

EB-2011-03-28-0: Bugfix:      group ids for submitted jobs are incorrect
                 Issue:       GE-3420
                 Review:      DG

DG-2011-03-28-0: Cleanup:     changed execd_param set in installation to 
                              compiled in parameter value