@@ -8,6 +8,10 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+DG-2011-04-01-0: Cleanup:     Removed unnecessary warning, which appears on 
+                              each job start.
+                 Review:      EB
+
 DG-2011-03-31-0: Enhancem.:   Added new GE logo to qmon and gui installer.
 
 JG-2011-03-31-1: Enhancem.:   mk_dist shall include the license file.
